[package]
name = "Gate"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2021"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"]}
tracing-appender = "0.2"
tracing = {version="0.1"}
time = {version="0.3.17", features=['local-offset']}
sqlx = {version = "0.7.3", features=["runtime-tokio-native-tls", "postgres"]}

tracing-subscriber = {version="0.3", features=['env-filter', 'time']}
thiserror = "1.0.56"
frankenstein = { version = "0.30.2", default-features = false, features = ["async-http-client"] }
log-panics = "2.1.0"
dotenv = "0.15.0"
sysfs_gpio = "0.6.1"
chrono = "0.4.22"
async-trait = "0.1.58"

